<resources>
    <string name="app_name">ЗаботаФОН</string>

    <string name="home_nav_log">Вызовы</string>
    <string name="home_nav_list">Белый список</string>
    <string name="home_nav_stats">Статистика</string>
    <string name="home_nav_settings">Настройки</string>

    <string name="permission_dialog_title">Разрешения</string>
    <string name="permission_dialog_notification_listener">Для корректной работы приложения необходимо предоставить ему разрешение на просмотр уведомлений. Это нужно, чтобы определить входящий вызов и отклонить его.</string>
    <string name="permission_dialog_must_accept">Для корректной работы приложения необходимо предоставить ему запрашиваемые разрешения.</string>

    <string name="other_dialog_oreo_warning">К сожалению, на модели вашего телефона ЗаботаФОН ещё не очень хорошо работает. Если что-то пойдёт не так, не грустите, а отправьте нам сообщение об ошибке во вкладке \'Настройки\' главного меню. Спасибо!</string>
    <string name="other_dialog_error_occurred">Возможно, при отклонении вызова произошла ошибка. Мы сожалеем, если приложение сработало не как надо. В ближайшем времени мы постраемся исправить эту проблему. Спасибо за понимание!</string>

    <string name="whitelist_title">Белый список:</string>
    <string name="whitelist_state_turn_off">Отключить блок</string>
    <string name="whitelist_state_turn_on">Включить блок</string>
    <string name="whitelist_link_user">Добавить заботящегося</string>
    <string name="whitelist_link_guide">Это - секретный код для подключения. Введите его на устройстве, которое хотите подключить.</string>
    <string name="whitelist_link_blank_code">000000</string>
    <string name="whitelist_enter_name">Введите имя</string>
    <string name="whitelist_long_name">Длинное имя</string>
    <string name="whitelist_add_first">Нажмите тут, чтобы добавить первый номер телефона в белый список.</string>
    <string name="whitelist_sms_sync">СМС Синхронизация</string>
    <string name="whitelist_sms_sync_guide">С вашего телефона отправится специальное СМС с зашифрованными данными. Перед отправкой внесите все необходимые изменения, чтобы не отправлять несколько сообщений.</string>
    <string name="whitelist_sms_sync_dialog">СМС с данными синхронизации успешно отправлено!</string>

    <string name="general_yes">Да</string>
    <string name="general_no">Нет</string>
    <string name="general_okay">Хорошо</string>
    <string name="general_add">Добавить</string>
    <string name="general_edit">Редактировать</string>
    <string name="general_delete">Удалить</string>
    <string name="general_name">Имя</string>
    <string name="general_phone">Номер телефона</string>
    <string name="general_something_wrong">Что-то пошло не так!</string>
    <string name="general_wrong_phone">Неверный номер телефона</string>
    <string name="general_enter_phone">Введите номер телефона</string>
    <string name="general_oh_oh">Упс!</string>
    <string name="general_terrible">Ужас</string>
    <string name="general_great">Супер!</string>
    <string name="general_empty">Пусто</string>
    <string name="general_warning">Внимание!</string>
    <string name="general_send">Отправить</string>

    <string name="hello_button_caretaker">Я забочусь</string>
    <string name="hello_button_cared">Обо мне заботятся</string>
    <string name="hello_caretaker_info">Я хочу управлять белым списком того, о ком я забочусь</string>
    <string name="hello_cared_info">Я хочу использовать белый список на этом телефоне</string>

    <string name="auth_info_first">Введите ваш номер телефона. На него придёт код подтверждения</string>
    <string name="auth_info_second">Теперь введите код подтверждения из sms</string>
    <string name="auth_code">Код</string>
    <string name="auth_send_code">Отправить код</string>
    <string name="auth_check_code">Проверить код</string>
    <string name="auth_wrong_code">Неверный код</string>
    <string name="auth_enter_code">Введите код</string>

    <string name="statistics_periods_title">Время разговоров:</string>
    <string name="statistics_phones_title">Топ номеров:</string>

    <string name="caretaker_list_title">Те, о ком вы заботитесь</string>
    <string name="caretaker_list_code">Секретный код</string>
    <string name="caretaker_list_wrong_code">Неверный код</string>
    <string name="caretaker_list_check">Проверить</string>

    <string name="service_notification_text">Белый список активен</string>

    <string name="action_copy_phone">Копировать телефон</string>
    <string name="action_copy_label">Копировать имя</string>

    <string name="settings_tutorial">Просмотреть возможности</string>
    <string name="settings_contact_dev">Связаться с разработчиком</string>
    <string name="settings_change_user_type">Сменить тип пользователя</string>
    <string name="settings_sign_out">Выйти из аккаунта</string>
    <string name="settings_thanks">Благодарности</string>
    <string name="settings_donate">Финансово поддержать</string>
    <string name="settings_dialog_no_browser">На вашем устройстве не найден веб браузер!</string>

    <string name="cared_settings_title">Настройки</string>
    <string name="cared_settings_about_dialog_title">Спасибо</string>
    <string name="cared_settings_about_dialog_message">Благодарю IT школу Samsung, без которой этот проект был бы не возможен. Отдельное спасибо преподавателю Дмитрию Владимировичу Яценко. \n \nНекоторые иконки сделаны Freepik и Dinosoftlabs с flaticon.com</string>
    <string-array name="cared_settings">
        <item>@string/settings_tutorial</item>
        <item>@string/settings_contact_dev</item>
        <item>@string/settings_change_user_type</item>
        <item>@string/settings_sign_out</item>
        <item>@string/settings_thanks</item>
    </string-array>

    <string name="log_title">Журнал вызовов:</string>
    <string name="log_unknown">Неизвестно</string>
    <string name="log_blocked">Заблокирован</string>

    <string-array name="tutorial_cared">
        <item>Создайте список номеров телефонов, которые не будут блокироваться.</item>
        <item>Подключите удалённое управление для человека, который о вас заботится.</item>
        <item>Смотрите статистику времени и частоты ваших разговоров по телефону.</item>
    </string-array>

    <string-array name="tutorial_caretaker">
        <item>Удалённо управляйте списком телефонов, которые не будут блокироваться.</item>
        <item>Изменяйте параметры на управляемом устройстве по смс, даже без интернета.</item>
        <item>Просматривайте статистику разговоров того, о ком вы заботитесь.</item>
    </string-array>

    <string name="time_label_short_second">с</string>
    <string name="time_label_short_minute">м</string>
    <string name="time_label_short_hour">ч</string>

    <string name="contact_dev_title">Связь с разработчиком</string>
    <string name="contact_dev_subject">Тип сообщения</string>
    <string name="contact_dev_text_label">Что случилось?</string>
    <string name="contact_dev_select_subject">Выбирите тип сообщения</string>
    <string name="contact_dev_enter_text">Введите текст</string>
    <string name="contact_dev_wrong_text_length">Текст слишком длинный</string>
    <string name="contact_dev_sent">Ваше сообщение успешно отправленно.</string>
    <string-array name="contact_dev_subjects">
        <item>Ошибка в приложении</item>
        <item>Другая проблема</item>
        <item>Благодарность</item>
    </string-array>
</resources>
