<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_nav_log"
        android:enabled="true"
        android:icon="@drawable/ic_call"
        android:title="@string/home_nav_log" />

    <item
        android:id="@+id/home_nav_list"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/home_nav_list" />

    <item
        android:id="@+id/home_nav_stats"
        android:enabled="true"
        android:icon="@drawable/ic_statistics"
        android:title="@string/home_nav_stats"/>

    <item
        android:id="@+id/home_nav_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/home_nav_settings"/>
</menu>