<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/whitelist_editor_edit"
        android:enabled="true"
        app:showAsAction="never"
        android:icon="@drawable/ic_edit"
        android:title="@string/general_edit"/>
    <item
        android:id="@+id/whitelist_editor_delete"
        android:enabled="true"
        app:showAsAction="never"
        android:icon="@drawable/ic_delete"
        android:title="@string/general_delete" />
    <item
        android:id="@+id/whitelist_editor_copy_phone"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/action_copy_phone" />
    <item
        android:id="@+id/whitelist_editor_copy_label"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/action_copy_label" />
</menu>