<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactDevActivity"
    android:id="@+id/layout"
    android:background="@color/colorSurface">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/contact_dev_title"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/colorOnSurface"
        android:textSize="32sp"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_subjects_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:hint="@string/contact_dev_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text">

        <AutoCompleteTextView
            android:id="@+id/text_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:labelFor="@+id/edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:hint="@string/contact_dev_text_label"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_subjects_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:gravity="top|start"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/general_send"
        android:textSize="16sp"
        android:fontFamily="@font/comfortaa_bold"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/sent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:alpha="0"
        android:background="@color/colorPrimary"
        android:elevation="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/contact_dev_sent"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorOnPrimary"
            android:textSize="32sp"
            android:layout_margin="32dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>