<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cloud_text_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/general_name"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperTextEnabled="false"
        app:layout_constraintTop_toTopOf="parent"
        app:hintTextColor="@color/colorOnSurface"
        app:boxStrokeColor="@color/cloud_text_field_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cloud_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnSurface"
            android:textCursorDrawable="@null"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cloud_text_phone_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/general_phone"
        app:helperTextEnabled="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cloud_text_name_layout"
        app:hintTextColor="@color/colorOnSurface"
        app:boxStrokeColor="@color/cloud_text_field_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cloud_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnSurface"
            android:textCursorDrawable="@null"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cloud_result_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/general_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/colorOnSurface"/>

</androidx.constraintlayout.widget.ConstraintLayout>