<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HelloActivity"
    android:background="@color/colorSurface">

    <Button
        android:id="@+id/hello_button_cared"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/hello_button_cared"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hello_wave"
        app:layout_constraintEnd_toStartOf="@+id/hello_track_right"
        app:layout_constraintStart_toStartOf="@+id/hello_track_left" />

    <Button
        android:id="@+id/hello_button_caretaker"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorSurface"
        android:text="@string/hello_button_caretaker"
        android:textColor="@color/colorOnSurface"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/hello_track_right"
        app:layout_constraintStart_toStartOf="@+id/hello_track_left"
        app:layout_constraintTop_toTopOf="@+id/hello_buttons_guideline" />

    <ImageView
        android:id="@+id/hello_wave"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/hello_wave"
        app:layout_constraintBottom_toTopOf="@id/hello_buttons_guideline" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_wave"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/hello_caretaker_info"
        android:textAlignment="center"
        android:textColor="@color/colorOnPrimary"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hello_track_right"
        app:layout_constraintStart_toStartOf="@+id/hello_track_left"
        app:layout_constraintTop_toBottomOf="@+id/hello_button_caretaker" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/hello_cared_info"
        android:textAlignment="center"
        android:textColor="@color/colorOnSurface"
        android:textSize="19sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/hello_button_cared"
        app:layout_constraintEnd_toStartOf="@+id/hello_track_right"
        app:layout_constraintStart_toStartOf="@+id/hello_track_left"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hello_buttons_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hello_track_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hello_track_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>